minio/minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-deployment
spec:
  selector:
    matchLabels:
      app: minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio
    spec:
      volumes:
      - name: localvolume
        persistentVolumeClaim:
          claimName: minio-pv-claim
          # hostPath:
          #   path: /home/ubuntu/data # Specify a path to a local drive or volume on the Kubernetes worker node
          #   type: DirectoryOrCreate # The path to the last directory must exist
      containers:
      - name: minio
        image: quay.io/minio/minio:latest
        args:
        - minio server /data --console-address :9001
        command:
        - /bin/bash
        - -c
        ports:
        - containerPort: 9000
          hostPort: 9000
        - containerPort: 9001
          hostPort: 9001
        volumeMounts:
        - mountPath: /data
          name: localvolume
