minio/minio-pod.yaml
# Deploys a new MinIO Pod into the metadata.namespace Kubernetes namespace
#
# The `spec.containers[0].args` contains the command run on the pod
# The `/data` directory corresponds to the `spec.containers[0].volumeMounts[0].mountPath`
# That mount path corresponds to a Kubernetes HostPath which binds `/data` to a local drive or volume on the worker node where the pod runs
# 
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: minio
  name: minio
  namespace: default
spec:
  containers:
  - name: minio
    image: quay.io/minio/minio:latest
    command:
    - /bin/bash
    - -c
    args:
    - minio server /data --console-address :9001
    volumeMounts:
    - mountPath: /data
      name: localvolume # Corresponds to the `spec.volumes` Persistent Volume
    ports:
    - containerPort: 9000
      hostPort: 9000
    - containerPort: 9001
      hostPort: 9001
  volumes:
  - name: localvolume
    persistentVolumeClaim:
      claimName: minio-pv-claim
    # hostPath:
    #   path: /home/ubuntu/data # Specify a path to a local drive or volume on the Kubernetes worker node
    #   type: DirectoryOrCreate # The path to the last directory must exist
