minio/minio-dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio-dev
  labels:
    name: minio-dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: minio-dev
  labels:
    app: minio
spec:
  replicas: 1
  template:
    metadata:
      name: minio
      labels:
        app: minio
    spec:
      volumes:
      - name: data
        emptyDir:
          sizeLimit: 500Mi
      containers:
      - name: minio
        image: quay.io/minio/minio:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /minio/health/live
            port: 9000
          initialDelaySeconds: 120
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /minio/health/ready
            port: 9000
          initialDelaySeconds: 120
          periodSeconds: 20
        resources:
          requests:
            memory: "1200Mi"
            cpu: "1500m"
          limits:
            memory: "1500Mi"
            cpu: "2000m"
        volumeMounts:
        - mountPath: /data
          name: data
        command:
        - /bin/bash
        - -c
        args:
        - minio server /data --console-address :9001
      restartPolicy: Always
  selector:
    matchLabels:
      app: minio
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: minio-dev
spec:
  type: LoadBalancer
  selector:
    app: minio
  ports:
  - port: 9001
    name: console
  - port: 9000
    name: s3
