minio/minio-service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service-lb
  namespace: default
spec:
  selector:
    app: minio
  type: LoadBalancer
  ports:
  - name: "ui-address"
    port: 9000
    targetPort: 9000
    nodePort: 30003
    protocol: TCP
  - name: "console-address"
    port: 9001
    targetPort: 9001
    nodePort: 30004
    protocol: TCP
