minio/minio-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-gen3
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: gen3.local
    http:
      paths:
      - path: /minio(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: minio-service
            port:
              number: 9000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: revproxy-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: revproxy-service
            port:
              number: 443
